--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ellioseven
-url: "http://ellioseven.github.io/"
+url: ""
 markdown: kramdown
 github_url: https://github.com/ellioseven
 highlighter: false
